test/visibility/rename/renameModuleViaOnly.good
renameModuleViaOnly.chpl:6: In function 'main':
renameModuleViaOnly.chpl:7: error: cannot rename symbol 'Toolbox' as it is not defined in 'Toolbox'
